# ClipBoardPlusPlus

./: .gitignore
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clipboard_functions.rs  controller.rs  fileio.rs  lib.rs  main.rs  tray.rs  utils.rs
