[package]
name = "clipboardpro"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clipboardpro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = {version = "1.41.1", features = ["full"] }
arboard = "3.4.1"
once_cell = "1.20.2"
tauri-plugin-positioner = {version = "2.0.2", features = ["tray-icon"] }
chrono = "0.4"
actix-web = "4.0"
oauth2 = "4.0"
url = "2.0"
reqwest = "0.12.9"
uuid = {version="1.11.0", features = ["v4"] }
dotenv = "0.15"
webbrowser = "1.0.2"
urlencoding = "2.1.3"
dirs-next = "2.0.0"

